# docs/swagger.json
@@ -52,10 +52,16 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "Successfully created album",
                         "schema": {
-                            "$ref": "#/definitions/model.Album"
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -191,13 +197,16 @@
             "type": "object",
             "properties": {
                 "album_name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Abbey Road"
                 },
                 "artist": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "The Beatles"
                 },
                 "cover_art": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "https://example.com/abbey_road_cover.jpg"
                 },
                 "created_at": {
                     "type": "string",
@@ -208,14 +217,16 @@
                     "format": "date-time"
                 },
                 "genre": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Rock"
                 },
                 "id": {
                     "type": "string",
                     "example": "f0a0a1e9-69bd-4bef-b8c6-4e8c0d3a1212"
                 },
                 "release_year": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1969
                 },
                 "updated_at": {
                     "type": "string",
